--- a/Website/index.html
+++ b/Website/index.html
@@ -2,9 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
 </head>
 <body>
+    <form id="loginForm">
+        <label>
+            Code:
+            <input id="password" name="password" type="text" required />
+        </label>
+        <button type="submit">Login</button>
+    </form>
 
+    <div id="result"></div>
+
+    <script>
+    document.getElementById('loginForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const password = document.getElementById('password').value;
+        const resultEl = document.getElementById('result');
+
+        try {
+            const res = await fetch('http://localhost:8000/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ password }) // must match CodePayload
+            });
+
+            if (!res.ok) {
+                const text = await res.text();
+                resultEl.textContent = `Error: ${res.status} ${text}`;
+                return;
+            }
+
+            const data = await res.json();
+            // data is the Person model returned by the API
+            resultEl.textContent = `Welcome ${data.first_name} ${data.last_name} — class: ${data.currentClass}`;
+        } catch (err) {
+            resultEl.textContent = `Network error: ${err.message}`;
+        }
+    });
+    </script>
 </body>
 </html>
