--- a/Website/index.html
+++ b/Website/index.html
@@ -159,6 +159,6 @@
   </div>
 
   <!-- Change ça : au lieu de ./login.js -->
-  <script type="module" src="./login.ts"></script>
+  <script type="module" src="src/login.ts"></script>
 </body>
 </html>
