--- a/Website/profile.html
+++ b/Website/profile.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>hey</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Profil - Saint Valentin Event</title>
+  <link rel="stylesheet" href="./profile.css" />
 </head>
 <body>
+  <div class="container">
+    <h1>🎀 Saint Valentin Event</h1>
+    <div id="content">
+      <!-- Content sera généré par le script -->
+    </div>
+  </div>
 
+  <script type="module" src="./src/profile.ts"></script>
 </body>
 </html>
